--- a/src/css/style.css
+++ b/src/css/style.css
@@ -89,7 +89,7 @@ html {
 }
 
 .promo__title {
-    color: red;
+    color: var(--light-color);
     font-size: 60px;
     font-weight: 400;
     text-transform: uppercase;
